Closed Bug 529829 Opened 15 years ago Closed 15 years ago

[HTML5][Patch] Crash [@ nsHtml5HtmlAttributes::getLocalName] with isindex attribute

Categories

(Core :: DOM: HTML Parser, defect, P1)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: hsivonen)

References

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(2 files)

Attached file testcase
See testcase, which crashes on load when the html5 parser is enabled.

http://crash-stats.mozilla.com/report/index/097f4e37-9048-48aa-976b-22d0c2091119
0	xul.dll	nsHtml5HtmlAttributes::getLocalName
1	xul.dll	nsHtml5TreeOperation::Perform
2	xul.dll	nsHtml5TreeOpExecutor::Flush
3	xul.dll	nsHtml5ExecutorFlusher::Run
4	xul.dll	nsThread::ProcessNextEvent
5	xul.dll	nsBaseAppShell::Run
6	nspr4.dll	PR_GetEnv
7	firefox.exe	wmain
8	firefox.exe	__tmainCRTStartup
9	kernel32.dll	BaseProcessStart
Priority: -- → P1
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Summary: [HTML5] Crash [@ nsHtml5HtmlAttributes::getLocalName] with isindex attribute → [HTML5][Patch] Crash [@ nsHtml5HtmlAttributes::getLocalName] with isindex attribute
http://hg.mozilla.org/mozilla-central/rev/91bc27d9497a
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsHtml5HtmlAttributes::getLocalName]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: