Bug 529829 - Crash [@ nsHtml5HtmlAttributes::getLocalName] with isindex attribute. rs=sicking.

--HG--
extra : rebase_source : 302169406834433818327cd19e81938e6569d48c